[gd_scene load_steps=3 format=3 uid="uid://btk2gh5w3tf1x"]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1_vdvxq"]

[sub_resource type="Theme" id="Theme_77xu6"]
Button/font_sizes/font_size = 50

[node name="MainMenu" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_77xu6")
script = ExtResource("1_vdvxq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Save" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Save"

[node name="Load" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Load"

[node name="New" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "New Game"

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="VBoxContainer/Load" to="." method="_on_load_pressed"]
